added search html

--- a/code/src/pages/index.html
+++ b/code/src/pages/index.html
@@ -76,7 +76,9 @@
 
   </section>
 
-
+  <label for="searchBox">Search Name...</label>
+  <input type="search" name="search" id="searchbox">
+  <button> Search Now</button>
 
 
 </body>
