changed to search mens/women instead of geenral search

--- a/code/src/pages/index.html
+++ b/code/src/pages/index.html
@@ -16,16 +16,15 @@
 <body>
 
 
-<<<<<<< HEAD
 
 
+  <div class="search-wrapper">
 
-  <label for="searchBox">Search Name...</label>
-  <input type="search" name="search" id="searchbox">
-  <button> Search Now</button>
+    <button class="searchMen"> Search Men</button>
+    <button class="searchWomen"> Search Women</button>
+  </div>
 
 
-=======
   <section class="hero">
     <div class="container">
 
@@ -44,7 +43,6 @@
     </div>
   </section>
 
->>>>>>> 7d000efcda172a6e2a554f25c066b68987ee049c
 </body>
 
 </html>
